refactor: no more treat InPageEdit as global

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,8 +14,7 @@
 	"globals": {
 		"mw": "readonly",
 		"$": "readonly",
-		"ssi_modal": "readonly",
-		"InPageEdit": "writeable"
+		"ssi_modal": "readonly"
 	},
 	"rules": {
 		"array-callback-return": [
